--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,8 +1144,9 @@
     "                 'extras':[1,3],\n",
     "                 'volcanes':[0],\n",
     "                 'idzona':[0,1,4],\n",
-    "                 #'class':[0,1],\n",
-    "                 #'otros':[0,1]\n",
+    "                 #'class':[0,1], no tuvo buenos resultados\n",
+    "                 'otros':[0,1],\n",
+    "                 'metrocuadrado':[0]\n",
     "                }\n",
     "    append = []\n",
     "    \n",
@@ -1164,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,8 +1191,9 @@
     "                 'extras':['all'],\n",
     "                 'volcanes':['all'],\n",
     "                 'idzona':['all'],\n",
-    "                 #'class':[0,1],\n",
-    "                 'otros':['all']\n",
+    "                 #'class':[0,1], no tuvo buenos resultados\n",
+    "                 'otros':['all'],\n",
+    "                 'metrocuadrado':[0],\n",
     "                }\n",
     "    append = []\n",
     "    \n",
@@ -1207,13 +1209,6 @@
     "    \n",
     "    return df[base + append]    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4775,104 +4770,6 @@
     "            'opc4':['idzona_meanencoding_m0', 'metroscubiertos_alt', 'metroscubiertos_i1', 'tipodepropiedad_6_pol', 'metroscubiertos', 'ciudad_cara', 'timestamp_scaled', 'tipodepropiedad_2_pol', 'idzona', 'antiguedad', 'ciudad_me_m4', 'provincia_me_m0', 'banos', 'ciudad_me_m1', 'garages', 'metroscubiertos_tipo_std', 'antiguedad_binning_3_ohe1']\n",
     "           }"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Forward Elimination"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
