--- a/parameter_tuning.ipynb
+++ b/parameter_tuning.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# parameter_tuning\n",
+    "En este notebook buscaremos los parametros optimos (aproximados, pues siempre se puede tunear mas tiempo) para los modelos elegidos para la resolucion del problema. Por tratarse de procesos costosos en tiempo, devolveremos los resultados hardcodeados para no tener que repetir el mismo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -46,7 +54,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parameter Tuning para XGBoost\n"
+    "<hr>\n",
+    "\n",
+    "# Parameter Tuning para XGBoost"
    ]
   },
   {
@@ -284,8 +294,262 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resultados obtenidos..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Detalles de la prueba:**\n",
+    "- Metodo utilizado: RandomizedSearchCV.\n",
+    "- n_iterations: 20.\n",
+    "- Parametros a probar:\n",
+    "\n",
+    "```\n",
+    "param_grid = {\n",
+    "    'max_depth':[13,14,15],\n",
+    "    'n_estimators':[120,130,140],\n",
+    "    'learning_rate': [0.05,0.1,0.3],\n",
+    "    'subsample':[0.5,0.8,0.9],\n",
+    "    'min_child_weight':[15,20]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "**Resultados (7h 48min)**:\n",
+    "```\n",
+    "{'subsample': 0.9,\n",
+    " 'n_estimators': 140,\n",
+    " 'min_child_weight': 15,\n",
+    " 'max_depth': 15,\n",
+    " 'learning_rate': 0.1}\n",
+    " ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "# Parameter Tuning para LightGBM\n",
+    "Utilizaremos learning rate de 0.1 y 5000 estimadores, luego esto sera escalado a mas estimadores con mejores learning rates, pero no deberia variar el resultado."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train,test = pre_processing.load_featured_datasets()\n",
+    "train_selected = feature_selection.get_selected_dataframe(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train_selected.drop('precio', axis=1).values\n",
+    "Y = train_selected['precio'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'num_leaves': [55, 60, 65],\n",
+    "    'max_depth': [8,10,12],\n",
+    "    'min_gain_to_split':[0.1, 0.2], \n",
+    "    'max_bin':[50, 100, 150],\n",
+    "    'min_data_in_leaf':[3000, 5000, 7000],\n",
+    "    'bagging_freq':[4,5,6],\n",
+    "    'bagging_fraction':[0.65, 0.7, 0.75],\n",
+    "    'feature_fraction':[0.7]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = lgb.LGBMRegressor(boosting_type='gbdt',  objective='regression', metric='mae', num_boost_round=5000,\n",
+    "                       verbose=0, learning_rate=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gridsearch = GridSearchCV(reg, param_grid, cv=4, scoring = 'neg_mean_absolute_error')\n",
+    "gridsearch = RandomizedSearchCV(reg, param_grid, n_iter=120, n_jobs=3, cv=4, scoring = 'neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "gridsearch.fit(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Como se corrio en otro notebook, se imprime a continuacion los resultados obtenidos:**\n",
+    "\n",
+    "CPU times: user 11min 24s, sys: 1.72 s, total: 11min 25s\n",
+    "Wall time: 16h 57min 11s\n",
+    "\n",
+    "RandomizedSearchCV(cv=4, error_score='raise-deprecating',\n",
+    "                   estimator=LGBMRegressor(boosting_type='gbdt',\n",
+    "                                           class_weight=None,\n",
+    "                                           colsample_bytree=1.0,\n",
+    "                                           importance_type='split',\n",
+    "                                           learning_rage=0.1, learning_rate=0.1,\n",
+    "                                           max_depth=-1, metric='mae',\n",
+    "                                           min_child_samples=20,\n",
+    "                                           min_child_weight=0.001,\n",
+    "                                           min_split_gain=0.0, n_estimators=100,\n",
+    "                                           n_jobs=-1, num_boost_round=5000,\n",
+    "                                           num_leaves=31...\n",
+    "                   param_distributions={'bagging_fraction': [0.65, 0.7, 0.75],\n",
+    "                                        'bagging_freq': [4, 5, 6],\n",
+    "                                        'feature_fraction': [0.7],\n",
+    "                                        'max_bin': [50, 100, 150],\n",
+    "                                        'max_depth': [8, 10, 12],\n",
+    "                                        'min_data_in_leaf': [3000, 5000, 7000],\n",
+    "                                        'min_gain_to_split': [0.1, 0.2],\n",
+    "                                        'num_leaves': [55, 60, 65]},\n",
+    "                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
+    "                   return_train_score=False, scoring='neg_mean_absolute_error',"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridsearch.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resultados obtenidos..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Detalles de la prueba:**\n",
+    "- Metodo utilizado: RandomizedSearchCV.\n",
+    "- n_iterations: 40.\n",
+    "- Parametros a probar:\n",
+    "\n",
+    "```\n",
+    "param_grid = {\n",
+    "    # Prevenir overfitting:\n",
+    "    'num_leaves': [60, 80, 100, 120],\n",
+    "    'max_depth': [5,10,15],\n",
+    "    'min_gain_to_split':[0.1], \n",
+    "    'max_bin':[100],\n",
+    "    'min_data_in_leaf':[5000],\n",
+    "    'bagging_freq':[3, 5],\n",
+    "    'bagging_fraction':[0.5, 0.605, 0.7],\n",
+    "    'feature_fraction':[0.7]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "**Resultados (4h 35min)**:\n",
+    "```\n",
+    "{'num_leaves': 60,\n",
+    " 'min_gain_to_split': 0.1,\n",
+    " 'min_data_in_leaf': 5000,\n",
+    " 'max_depth': 10,\n",
+    " 'max_bin': 100,\n",
+    " 'feature_fraction': 0.7,\n",
+    " 'bagging_freq': 5,\n",
+    " 'bagging_fraction': 0.7}\n",
+    " \n",
+    "MAE = 502020k\n",
+    " ```\n",
+    " \n",
+    "<hr>\n",
+    "\n",
+    "**Detalles de la prueba:**\n",
+    "- Metodo utilizado: RandomizedSearchCV.\n",
+    "- n_iterations: 120.\n",
+    "- Parametros a probar:\n",
+    "\n",
+    "```\n",
+    "param_grid = {\n",
+    "    'num_leaves': [55, 60, 65],\n",
+    "    'max_depth': [8,10,12],\n",
+    "    'min_gain_to_split':[0.1, 0.2], \n",
+    "    'max_bin':[50, 100, 150],\n",
+    "    'min_data_in_leaf':[3000, 5000, 7000],\n",
+    "    'bagging_freq':[4,5,6],\n",
+    "    'bagging_fraction':[0.65, 0.7, 0.75],\n",
+    "    'feature_fraction':[0.7]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "**Resultados (16h 57min)**:\n",
+    "```\n",
+    "{'num_leaves': 55,\n",
+    " 'min_gain_to_split': 0.2,\n",
+    " 'min_data_in_leaf': 3000,\n",
+    " 'max_depth': 12,\n",
+    " 'max_bin': 150,\n",
+    " 'feature_fraction': 0.7,\n",
+    " 'bagging_freq': 5,\n",
+    " 'bagging_fraction': 0.75}\n",
+    " \n",
+    "MAE = 494138k\n",
+    " ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "# Devolvemos los resultados..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,16 +562,25 @@
     "            'min_child_weight': 15,\n",
     "            'max_depth': 15,\n",
     "            'learning_rate': 0.1\n",
-    "        }\n",
+    "        },\n",
+    "        'lightgbm':{'num_leaves': 55,\n",
+    "            'min_gain_to_split': 0.2,\n",
+    "            'min_data_in_leaf': 3000,\n",
+    "            'max_depth': 12,\n",
+    "            'max_bin': 150,\n",
+    "            'feature_fraction': 0.7,\n",
+    "            'bagging_freq': 5,\n",
+    "            'bagging_fraction': 0.75,\n",
+    "            # Parametros que no fueron optimizados:\n",
+    "            'boosting_type':'gbdt',\n",
+    "            'objective':'regression',\n",
+    "            'metric':'mae',\n",
+    "            'num_boost_round':5000,\n",
+    "            'verbose':0,\n",
+    "            'learning_rate':0.1\n",
+    "         }\n",
     "    }"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -326,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
