--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,6 @@
     "- ***feature_generation:*** primer etapa del pipeline. En este notebook se generarán nuevos features para luego, realizar un proceso de selección de los mejores features para cada modelo.\n",
     "- ***feature_selection*** segunda etapa, donde se buscara encontrar los features con mayor importancia, es decir aquellos que aporten mayor informacion.\n",
     "- ***parameter_tuning:*** tercer etapa, notebook donde se tunean los parámetros para cada modelo.\n",
-    "- ***predict:*** finalmente, una vez obtenidos los mejores parametros y features para cada modelo, este notebook se encargará de generar el csv con las predicciones finales para el modelo que se le indique.\n",
     "\n",
     "<hr>\n"
    ]
@@ -64,8 +63,7 @@
     "import pre_processing\n",
     "import feature_generation\n",
     "import feature_selection\n",
-    "import parameter_tuning\n",
-    "import predict"
+    "import parameter_tuning"
    ]
   },
   {
@@ -5577,7 +5575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
