--- a/main.ipynb
+++ b/main.ipynb
@@ -52,8 +52,20 @@
       "Importing Jupyter notebook from pre_processing.ipynb\n",
       "Importing Jupyter notebook from feature_generation.ipynb\n",
       "Importing Jupyter notebook from feature_selection.ipynb\n",
-      "Importing Jupyter notebook from parameter_tuning.ipynb\n",
-      "Importing Jupyter notebook from predict.ipynb\n"
+      "Importing Jupyter notebook from parameter_tuning.ipynb\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'predict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ac7ee8d7d919>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfeature_generation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfeature_selection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mparameter_tuning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/nbimporter.py\u001b[0m in \u001b[0;36mload_module\u001b[0;34m(self, fullname)\u001b[0m\n\u001b[1;32m    108\u001b[0m                 \u001b[0;31m# run the code in the module\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m                 \u001b[0mcodeobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'exec'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m                 \u001b[0mexec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcodeobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_ns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msave_user_ns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Facultad/Datos/TP2/datos_tp2_2c2019/parameter_tuning.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m    \u001b[0;34m\"metadata\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m    \"source\": [\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;34m\"# parameter_tuning\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;34m\"En este notebook buscaremos los parametros optimos (aproximados, pues siempre se puede tunear mas tiempo) para los modelos elegidos para la resolucion del problema. Por tratarse de procesos costosos en tiempo, devolveremos los resultados hardcodeados para no tener que repetir el mismo.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m    ]\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'predict'"
      ]
     }
    ],
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,116 +99,6 @@
     "<hr>\n",
     "\n",
     "# Resultados obtenidos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LightGBM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lightgbm as lgb\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# best\n",
-    "params = {\n",
-    "    'boosting_type': 'gbdt',\n",
-    "    'objective': 'regression',\n",
-    "    'metric': 'mae',\n",
-    "    'max_depth': 14,\n",
-    "    'num_leaves': 120,\n",
-    "    'learning_rate': 0.02,\n",
-    "    'verbose': 0, \n",
-    "    'early_stopping_round': 1000}\n",
-    "n_estimators=99999999"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = {\n",
-    "    'boosting_type': 'gbdt',\n",
-    "    'objective': 'regression',\n",
-    "    'metric': 'mae',\n",
-    "    'max_depth': 7,\n",
-    "    'num_leaves': 40,\n",
-    "    'learning_rate': 0.1,\n",
-    "    'verbose': 0, \n",
-    "    'early_stopping_round': 100}\n",
-    "n_estimators=5000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-11d8bb5832fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpre_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_featured_datasets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Datos/TP2/pre_processing.ipynb\u001b[0m in \u001b[0;36mload_featured_datasets\u001b[0;34m(class_feature)\u001b[0m\n\u001b[1;32m      4\u001b[0m    \u001b[0;34m\"cell_type\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"markdown\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m    \u001b[0;34m\"metadata\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m    \"source\": [\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;34m\"# pre_processing\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m    ]\n",
-      "\u001b[0;32m~/Datos/TP2/pre_processing.ipynb\u001b[0m in \u001b[0;36mload_featured_appended_dataset\u001b[0;34m(class_feature)\u001b[0m\n\u001b[1;32m     13\u001b[0m    \u001b[0;34m\"metadata\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m    \u001b[0;34m\"outputs\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m    \"source\": [\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;34m\"import pandas as pd\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;34m\"import numpy as np\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36mmerge\u001b[0;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0mvalidate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m     )\n\u001b[0;32m---> 83\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36mget_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    640\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_indicator_pre_merge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    641\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 642\u001b[0;31m         \u001b[0mjoin_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft_indexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright_indexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_join_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    643\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    644\u001b[0m         \u001b[0mldata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m_get_join_info\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    857\u001b[0m             )\n\u001b[1;32m    858\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 859\u001b[0;31m             \u001b[0;34m(\u001b[0m\u001b[0mleft_indexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright_indexer\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_join_indexers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    860\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    861\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright_index\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m_get_join_indexers\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    836\u001b[0m         \u001b[0;34m\"\"\" return the join indexers \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    837\u001b[0m         return _get_join_indexers(\n\u001b[0;32m--> 838\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleft_join_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright_join_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    839\u001b[0m         )\n\u001b[1;32m    840\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m_get_join_indexers\u001b[0;34m(left_keys, right_keys, sort, how, **kwargs)\u001b[0m\n\u001b[1;32m   1318\u001b[0m     \u001b[0mjoin_func\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_join_functions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1319\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1320\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mjoin_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1321\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1322\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "train,test = pre_processing.load_featured_datasets()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train['precio'] = train['precio'].map(lambda x: math.log(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = feature_generation.get_features()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_selected = feature_selection.get_selected_dataframe(train)\n",
-    "test_selected = feature_selection.get_selected_dataframe(test, precio=False)"
    ]
   },
   {
@@ -807,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,11 +727,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_selected = feature_selection.get_selected_dataframe(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "antiguedad\n",
+      "habitaciones\n",
+      "garages\n",
+      "banos\n",
+      "metroscubiertos\n",
+      "metrostotales\n",
+      "idzona\n",
+      "lat\n",
+      "lng\n",
+      "gimnasio\n",
+      "usosmultiples\n",
+      "piscina\n",
+      "escuelascercanas\n",
+      "centroscomercialescercanos\n",
+      "metrostotales_confiables_alt\n",
+      "metroscubiertos_alt\n",
+      "metrostotales_alt\n",
+      "metroscubiertos_i1\n",
+      "metrostotales_i1\n",
+      "metroscubiertos_alt\n",
+      "metrostotales_i2\n",
+      "tipodepropiedad_0_binary\n",
+      "tipodepropiedad_1_binary\n",
+      "tipodepropiedad_2_binary\n",
+      "tipodepropiedad_3_binary\n",
+      "intercept_pol\n",
+      "tipodepropiedad_0_pol\n",
+      "tipodepropiedad_1_pol\n",
+      "tipodepropiedad_2_pol\n",
+      "tipodepropiedad_3_pol\n",
+      "tipodepropiedad_4_pol\n",
+      "tipodepropiedad_5_pol\n",
+      "tipodepropiedad_6_pol\n",
+      "es_Distrito Federal\n",
+      "es_Edo. de México\n",
+      "es_Jalisco\n",
+      "es_Querétaro\n",
+      "es_Nuevo León\n",
+      "es_Puebla\n",
+      "es_San luis Potosí\n",
+      "es_Yucatán\n",
+      "es_Morelos\n",
+      "es_Veracruz\n",
+      "provincia_me_m0\n",
+      "ciudad_0_binary\n",
+      "ciudad_1_binary\n",
+      "ciudad_2_binary\n",
+      "ciudad_3_binary\n",
+      "ciudad_4_binary\n",
+      "ciudad_5_binary\n",
+      "ciudad_6_binary\n",
+      "ciudad_7_binary\n",
+      "ciudad_top50_1_ohe\n",
+      "ciudad_top50_2_ohe\n",
+      "ciudad_top50_3_ohe\n",
+      "ciudad_top50_4_ohe\n",
+      "ciudad_top50_5_ohe\n",
+      "ciudad_top50_6_ohe\n",
+      "ciudad_top50_7_ohe\n",
+      "ciudad_top50_8_ohe\n",
+      "ciudad_top50_9_ohe\n",
+      "ciudad_top50_10_ohe\n",
+      "ciudad_top50_11_ohe\n",
+      "ciudad_top50_12_ohe\n",
+      "ciudad_top50_13_ohe\n",
+      "ciudad_top50_14_ohe\n",
+      "ciudad_top50_15_ohe\n",
+      "ciudad_top50_16_ohe\n",
+      "ciudad_top50_17_ohe\n",
+      "ciudad_top50_18_ohe\n",
+      "ciudad_top50_19_ohe\n",
+      "ciudad_top50_20_ohe\n",
+      "ciudad_top50_21_ohe\n",
+      "ciudad_top50_22_ohe\n",
+      "ciudad_top50_23_ohe\n",
+      "ciudad_top50_24_ohe\n",
+      "ciudad_top50_25_ohe\n",
+      "ciudad_top50_26_ohe\n",
+      "ciudad_top50_27_ohe\n",
+      "ciudad_top50_28_ohe\n",
+      "ciudad_top50_29_ohe\n",
+      "ciudad_top50_30_ohe\n",
+      "ciudad_top50_31_ohe\n",
+      "ciudad_top50_32_ohe\n",
+      "ciudad_top50_33_ohe\n",
+      "ciudad_top50_34_ohe\n",
+      "ciudad_top50_35_ohe\n",
+      "ciudad_top50_36_ohe\n",
+      "ciudad_top50_37_ohe\n",
+      "ciudad_top50_38_ohe\n",
+      "ciudad_top50_39_ohe\n",
+      "ciudad_top50_40_ohe\n",
+      "ciudad_top50_41_ohe\n",
+      "ciudad_top50_42_ohe\n",
+      "ciudad_top50_43_ohe\n",
+      "ciudad_top50_44_ohe\n",
+      "ciudad_top50_45_ohe\n",
+      "ciudad_top50_46_ohe\n",
+      "ciudad_top50_47_ohe\n",
+      "ciudad_top50_48_ohe\n",
+      "ciudad_top50_49_ohe\n",
+      "ciudad_top50_50_ohe\n",
+      "ciudad_cara\n",
+      "ciudad_barata\n",
+      "ciudad_normal\n",
+      "ciudad_me_m1\n",
+      "ciudad_me_m2\n",
+      "ciudad_me_m3\n",
+      "ciudad_me_m4\n",
+      "dic2016\n",
+      "aniomes_me_m0\n",
+      "jardin\n",
+      "vigilancia\n",
+      "calefaccion\n",
+      "parrilla\n",
+      "terraza\n",
+      "servicio\n",
+      "metroscubiertos_city_mean\n",
+      "metroscubiertos_city_std\n",
+      "metroscubiertos_tipo_mean\n",
+      "metroscubiertos_tipo_std\n",
+      "hab_binning_me_m0\n",
+      "hab_binning_me_m1\n",
+      "hab_binning_me_m2\n",
+      "hab_binning_me_m3\n",
+      "hab_binning_me_m4\n",
+      "antiguedad_binning_1_ohe1\n",
+      "antiguedad_binning_2_ohe1\n",
+      "antiguedad_binning_3_ohe1\n",
+      "antiguedad_binning_4_ohe1\n",
+      "antiguedad_binning_5_ohe1\n",
+      "antiguedad_binning_6_ohe1\n",
+      "antiguedad_binning_7_ohe1\n",
+      "antiguedad_binning_8_ohe1\n",
+      "antiguedad_binning_9_ohe1\n",
+      "usd_precio_promedio_mensual\n",
+      "usd_subio\n",
+      "volcan_cerca\n",
+      "idzona_meanencoding_m0\n",
+      "idzona_meanencoding_m1\n",
+      "idzona_meanencoding_m4\n",
+      "apto_chicos\n",
+      "full\n",
+      "mean_city_sqrm_price\n",
+      "precio\n"
+     ]
+    }
+   ],
+   "source": [
+    "for columna in train_selected:\n",
+    "    print(columna)"
    ]
   },
   {
