--- a/parameter_tuning.ipynb
+++ b/parameter_tuning.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,7 @@
       "Importing Jupyter notebook from pre_processing.ipynb\n",
       "Importing Jupyter notebook from feature_generation.ipynb\n",
       "Importing Jupyter notebook from feature_selection.ipynb\n",
-      "Importing Jupyter notebook from parameter_tuning.ipynb\n",
-      "Importing Jupyter notebook from predict.ipynb\n"
+      "Importing Jupyter notebook from parameter_tuning.ipynb\n"
      ]
     }
    ],
@@ -46,8 +45,7 @@
     "import pre_processing\n",
     "import feature_generation\n",
     "import feature_selection\n",
-    "import parameter_tuning\n",
-    "import predict"
+    "import parameter_tuning"
    ]
   },
   {
@@ -599,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
